--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node_modules/gulp/bin/gulp.js"
+    "start": "node_modules/gulp/bin/gulp.js",
+	"windows": "node_modules\\gulp\\bin\\gulp.js"
   },
   "author": "",
   "license": "ISC",
